// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pearlify/atoms passes the snapshot test for a <Text> component 1`] = `
<Text
  color="success.400"
  fontFamily="body"
  fontWeight="hairline"
  style={
    Object {
      "display": "flex",
    }
  }
>
  asdasd
</Text>
`;

exports[`pearlify/atoms passes the snapshot test for a <View> component 1`] = `
<View
  box1={
    Object {
      "backgroundColor": "success.500",
      "height": 50,
      "width": 50,
    }
  }
  root={
    Object {
      "backgroundColor": "danger.400",
      "boxShadow": "4xl",
      "height": 200,
      "p": "4xl",
      "width": 200,
    }
  }
  style={
    Object {
      "backgroundColor": "#FF8371",
      "display": "flex",
      "elevation": 28,
      "height": 200,
      "shadowColor": "#1A2138",
      "shadowOffset": Object {
        "height": 28,
        "width": 0,
      },
      "shadowOpacity": 0.16,
      "shadowRadius": 28,
      "width": 200,
    }
  }
/>
`;

exports[`pearlify/basic passes the snapshot test for a <Text> component 1`] = `
<Text
  style={
    Object {
      "display": "flex",
    }
  }
>
  asdasd
</Text>
`;

exports[`pearlify/basic passes the snapshot test for a <View> component 1`] = `
<View
  style={
    Object {
      "display": "flex",
    }
  }
/>
`;

exports[`pearlify/molecules passes the snapshot test for a <View> component 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#FF8371",
      "display": "flex",
      "elevation": 28,
      "height": 200,
      "padding": 56,
      "shadowColor": "#1A2138",
      "shadowOffset": Object {
        "height": 28,
        "width": 0,
      },
      "shadowOpacity": 0.16,
      "shadowRadius": 28,
      "width": 200,
    }
  }
>
  <View
    style={
      Object {
        "backgroundColor": "#A2D608",
        "display": "flex",
        "height": 50,
        "width": 50,
      }
    }
  />
  <View
    style={
      Object {
        "display": "flex",
      }
    }
  />
</View>
`;
